tests/fixtures/invalid/pow_int_list_int.py
# Cannot call pow() with Int, List[int], Int
x = pow(1, [1, 2, 3], 1)
